fix faq spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1153,8 +1153,8 @@ h1, h2, h3, h4, h5,
 
 .faq-section {
   background: #ebebeb;
-  min-height: 100vh;
-  padding: 20vh 0 0;
+  min-height: 50vh;
+  padding: 5vh 0 0;
 }
 .faq-title h2 {
   position: relative;
